# chat

./: README.md  client.py  client_base.db3  descriptor.py  metaclasses.py  pyproject.toml  run.py  server.py  server_base.db3  utils.py
app/: client_base.db3  config.py  models.py  server_base.db3  server_utils.py  utils.py
lesson1/: tasks1-6.py
lesson2/: file.yaml  orders.json  task1.py  task2.py  task3.py
lesson3/: client.py  server.py  utils.py
log/: client_log_config.py  deco_log_config.py  server_log_config.py
log/logs/: server.log.2023-06-06  server.log.2023-06-13  server.log.2023-06-17  server.log.2023-06-23  server.log.2023-06-24  server.log.2023-06-27  server.log.2023-06-29  server.log.2023-07-11
ping/: task1.py  task2.py  task3.py
tests/: test_client.py  test_server.py  test_utils.py
