[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Mary_Chi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
chardet = "^5.1.0"
pyyaml = "^6.0"
tabulate = "^0.9.0"
sqlalchemy = "^2.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
